[package]
name = "cloud-sql-connector"
version = "0.1.0"
edition = "2024"
description = "Cloud SQL connector for Rust"
license = "MIT"
repository = "https://github.com/tailor-platform/cloud-sql-connector-rs"

[dependencies]
gcp_auth = "0.12.6"
reqwest = { version = "0.13.0", features = ["json", "rustls"], default-features = false }
rustls = { version = "0.23.28", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
tokio-postgres = "0.7.15"
deadpool = "0.12.3"
rsa = "0.9.9"
rand = "0.10.0"
rand_core = "0.6"
pkcs8 = { version = "0.10.2", features = ["pem"] }
tokio = { version = "1.49.0", features = ["rt", "time", "sync", "macros"] }
arc-swap = "1.7.1"
thiserror = "2.0.17"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.42", features = ["serde"] }
x509-parser = "0.18.0"
